--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
 <body  style="background-color:#92a8d1;">
 
 <p>
-	<a href=myprofile.html><i class="fa fa-arrow-left" style="margin-left:30px"></i></a>
+	<a href=index.html><i class="fa fa-arrow-left" style="margin-left:30px"></i></a>
 </p>
 <h1><center>Welcome To My Gallery</center></h1>
 <div class="container">
